# quake-clone

./: .gitignore  Cargo.toml  build.rs
src/: gpu_handler.rs  lib.rs  main.rs
src/gpu_handler/: camera.rs  instance.rs  model.rs  resources.rs  texture.rs
src/shaders/: shader.wgsl
