[package]
name = "quake-clone"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
pollster = "*"
log = "0.4"
tobj = { version = "3.2", default-features = false, features = ["async"]}
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[[bin]]
name = "quake-clone"
path = "src/main.rs"
